<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16" >

        <Button
            android:id="@+id/buttonClearMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonClearMemory" />

        <Button
            android:id="@+id/buttonSquareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonSquareRoot" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_weight=".142"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button9" />

        <Button
            android:id="@+id/buttonToggleSign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonToggleSign" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonClear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16" >

        <Button
            android:id="@+id/buttonRecallMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonRecallMemory" />

        <Button
            android:id="@+id/buttonSquared"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonSquared" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button6" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonMultiply" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonDivide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16" >

        <Button
            android:id="@+id/buttonAddToMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonAddToMemory" />

        <Button
            android:id="@+id/buttonInvert"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonInvert" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/button3" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonAdd" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonSubtract" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16" >

        <Button
            android:id="@+id/buttonSubtractFromMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonSubtractFromMemory" />

        <Button
            android:id="@+id/buttonSine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonSine" />

        <Button
            android:id="@+id/buttonCosine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonCosine" />

        <Button
            android:id="@+id/buttonTangent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonTangent" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/button0" />

        <Button
            android:id="@+id/buttonDecimalPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/buttonDecimalPoint" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:background="@android:color/black"
            android:textColor="@android:color/holo_orange_dark"
            android:autoSizeTextType="uniform"
            android:text="@string/buttonEquals" />
    </LinearLayout>

</LinearLayout>
